<resources>
    <string name="app_name">HI-Card</string>
    <string name="loading">Loading...</string>
    <string name="No_internet_connection">No internet connection!</string>
    <string name="msg_diabetes_back_pain">Diabetes, back pain, etc</string>
    <string name="msg_i_agree_to_share">I agree to share my location if needed</string>
    <string name="msg_insert_your_current">Insert your current location</string>
    <string name="msg_upload_your_image">Upload your image</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_about">About</string>
    <string name="lbl_insert_the_map">Insert the map </string>
    <string name="msg_don_t_have_an_account">Don\u2019t have an account? Register</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_finish">FINISH</string>
    <string name="msg_confirm_password">Confirm password</string>
    <string name="msg_ex_jon_smith_email_com">ex: jon.smith@email.com</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="msg_contact_the_nearest">I\u2019m coming!</string>
    <string name="msg_have_an_account">Have an account? </string>
    <string name="lbl_patient">Patient</string>
    <string name="lbl_ex_jon_smith">ex: jon smith</string>
    <string name="msg_current_medical">Current medical record</string>
    <string name="lbl_sign_up">SIGN UP</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_medical_history">Medical history</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_name">Name</string>
    <string name="msg_age_insert_name">Age: </string>
    <string name="msg_hospital_s_name">Hospital\u2018s name</string>
    <string name="lbl_patient_detail">Patient detail</string>
    <string name="lbl_read_more">Read more</string>
    <string name="msg_don_t_have_an_account2">Don\u2019t have an account?</string>
    <string name="lbl_register"> Register</string>
    <string name="lbl">*********</string>
    <string name="msg_800m_away_of_the">800m away of the nearest hospital</string>
    <string name="lbl_email">Email</string>
    <string name="msg_bui_trung_tin_app">HI-Card</string>
    <string name="lbl_gender">Gender</string>
    <string name="msg_create_your_account">Add your information</string>
    <string name="msg_insert_your_medical">Nothing happen! we announce when patient need! </string>
    <string name="lbl_dumb_as_shit_v">Dumb as shit ;V</string>
    <string name="lbl_your_name">Your Name</string>
    <string name="lbl_hospital">Hospital</string>
    <string name="msg_ex_xxx_kha_van">ex: xxx Kha Van Can, Linh Chieu, Thu Duc, Ho Chi Minh</string>
    <string name="msg_enjoy_getting_watched">Enjoy getting watched :V</string>
    <string name="lbl_password">Password</string>
    <string name="msg_i_understood_the">I understood the terms </string>
    <string name="lbl_address">Address</string>
    <string name="msg_sex_insert_gender">Phone: </string>
    <string name="lbl_patient_name">Patient Name</string>
    <string name="lbl_map_location"> Location</string>
    <string name="msg_insert_your_medical2">medical history ... </string>
    <string name="msg_enter_your_information">Enter your information</string>
    <string name="please_wait">We will announce you later!</string>
</resources>
