<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data/>
    <LinearLayout
        android:id="@+id/linearPhoneFour"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/groupStylewhite_A700_2"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/tootlbarToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            app:contentInsetStart="0dp"/>
        <LinearLayout
            android:id="@+id/linearColumnview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:paddingTop="4dp">
            <FrameLayout
                android:id="@+id/frameStackView"
                android:layout_gravity="center_horizontal"
                android:layout_width="310dp"
                android:layout_height="79dp">
                <View
                    android:background="@drawable/rectangle_bg_white_border_black"
                    android:id="@+id/viewView"
                    android:layout_gravity="bottom|center"
                    android:layout_width="310dp"
                    android:layout_height="43dp"/>
                <TextView
                    android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtCreateyour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:letterSpacing="0.03"
                    android:lineSpacingExtra="15dp"
                    android:singleLine="true"
                    android:text="@string/msg_create_your_account"
                    style="@style/txtPoppinssemibold26"/>

                <TextView
                    android:id="@+id/txtHospital"
                    style="@style/txtSolidRounded_1"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="bottom|center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/lbl_hospital"/>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/linearColumnhospital"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="3dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHospitalsname"
                    style="@style/txtPoppinsregular16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="8dp"
                    android:singleLine="true"
                    android:text="@string/msg_hospital_s_name" />

                <EditText
                    android:id="@+id/etname"
                    style="@style/etSolidRounded_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangle_bg_gray_r20"
                    android:ellipsize="end"
                    android:hint="Ex: KH Hospital"
                    android:inputType="text"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="5dp"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    android:paddingTop="13dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="13dp"
                    android:singleLine="true"
                    android:textColorHint="@color/blue_gray_400_87"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearHospitalDetail"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="3dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHospitalsdetail"
                    style="@style/txtPoppinsregular16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="8dp"
                    android:singleLine="true"
                    android:text="Hospital address" />

                <EditText
                    android:id="@+id/etdetail"
                    style="@style/etSolidRounded_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangle_bg_gray_r20"
                    android:ellipsize="end"
                    android:hint="Ex: 118 Kha Van Can, phuong Linh Chieu, Thu Duc"
                    android:inputType="text"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="5dp"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    android:paddingTop="13dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="13dp"
                    android:singleLine="true"
                    android:textColorHint="@color/blue_gray_400_87"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearHospitalDetail1"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="3dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtHospitalsdetail1"
                    style="@style/txtPoppinsregular16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="8dp"
                    android:singleLine="true"
                    android:text="Hospital phone number" />

                <EditText
                    android:id="@+id/etdetail1"
                    style="@style/etSolidRounded_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rectangle_bg_gray_r20"
                    android:ellipsize="end"
                    android:hint="Ex: 0XXXXXXXXXX"
                    android:inputType="text"
                    android:letterSpacing="0.01"
                    android:lineSpacingExtra="5dp"
                    android:minHeight="48dp"
                    android:paddingStart="15dp"
                    android:paddingTop="13dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="13dp"
                    android:singleLine="true"
                    android:textColorHint="@color/blue_gray_400_87"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="13dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:lineSpacingExtra="7dp"
            android:singleLine="true"
            android:text="@string/msg_i_understood_the"
            android:textColor="@color/black_900_02"
            android:textFontWeight="400"
            android:textSize="12dp"
            android:textStyle="normal"
            tools:ignore="TextSizeCheck"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            style="@style/btnSolidRounded_2"
            android:layout_width="288dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="12dp"
            android:ellipsize="end"
            android:gravity="center"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="8dp"
            android:paddingStart="30dp"
            android:paddingTop="9dp"
            android:paddingEnd="30dp"
            android:paddingBottom="9dp"
            android:singleLine="true"
            android:text="@string/lbl_sign_up"
            tools:ignore="TextSizeCheck"/>


    </LinearLayout>


</layout>